# etl-sandbox

./: .gitignore  README.md
consumer/: main.py  models.py  pyproject.toml
producer/: Makefile  main.py  pyproject.toml
