[project]
name = "etl-sandbox-producer"
version = "0.1.0"
description = "Example event producer for a payment system"
authors = [
    {name = "Dane Brear",email = "dane.brear@gmail.com"}
]
requires-python = ">=3.11"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
